--- a/Graduation Project/Views/_ViewImports.cshtml
+++ b/Graduation Project/Views/_ViewImports.cshtml
@@ -1,3 +1,12 @@
 ﻿@using Graduation_Project
 @using Graduation_Project.Models
+@using Graduation_Project.BLL.ViewModels.CourseVM
+@using Graduation_Project.BLL.ViewModels.GradeVM
+@using Graduation_Project.BLL.ViewModels.SessionVM
+@using Graduation_Project.BLL.ViewModels.UserVM
+@using Graduation_Project.BLL.Services.Interfaces
+@using Graduation_Project.BLL.Services
+@using Graduation_Project.BLL.Pagination
+
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
