--- a/Graduation Project/Views/Course/Edit.cshtml
+++ b/Graduation Project/Views/Course/Edit.cshtml
@@ -1,6 +1,4 @@
-﻿@using Graduation_Project.DAl.Models
-@model EditCourseVM
-
+﻿@model EditCourseVM
 
 
 @{
@@ -64,5 +62,7 @@
 </div>
 
 @section Scripts {
-    @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+    @{
+        await Html.RenderPartialAsync("_ValidationScriptsPartial");
+    }
 }
