--- a/Graduation Project/Views/Grade/Edit.cshtml
+++ b/Graduation Project/Views/Grade/Edit.cshtml
@@ -10,13 +10,13 @@
     <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
-        <label asp-for="SessionId"></label>
+        <label asp-for="SessionId">Session Name</label>
         <select asp-for="SessionId" class="form-control" asp-items="ViewBag.Sessions"></select>
         <span asp-validation-for="SessionId" class="text-danger"></span>
     </div>
 
     <div class="form-group">
-        <label asp-for="TraineeId"></label>
+        <label asp-for="TraineeId">Trainee Name</label>
         <select asp-for="TraineeId" class="form-control" asp-items="ViewBag.Trainees"></select>
         <span asp-validation-for="TraineeId" class="text-danger"></span>
     </div>
