--- a/Graduation Project/Views/_ViewImports.cshtml
+++ b/Graduation Project/Views/_ViewImports.cshtml
@@ -7,6 +7,7 @@
 @using Graduation_Project.BLL.Services.Interfaces
 @using Graduation_Project.BLL.Services
 @using Graduation_Project.BLL.Pagination
+@using Graduation_Project.DAl.Models
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
