--- a/Graduation Project/Views/_ViewImports.cshtml
+++ b/Graduation Project/Views/_ViewImports.cshtml
@@ -8,6 +8,7 @@
 @using Graduation_Project.BLL.Services
 @using Graduation_Project.BLL.Pagination
 @using Graduation_Project.DAl.Models
+@using Graduation_Project.BLL.ViewModels.DashboardVM
 
 
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
